Updates LeetCode 40